tests/paczka1/small_fuzzy/32043996.err
Error in line 3: 0wb0ZR S369 y4,8
Error in line 13: EuYQ5NYa S369 93,1
